fix: Use flex wrap for responsive chef section

--- a/styles.css
+++ b/styles.css
@@ -876,6 +876,7 @@ nav:last-child {
     flex-direction: column;
     align-items: center;
     margin: auto;
+    text-align: center;
 }
 
 .section-heading {
@@ -889,6 +890,7 @@ nav:last-child {
     flex-direction: row;
     align-items: flex-start;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 2.5rem;
 }
 
@@ -904,9 +906,9 @@ nav:last-child {
 }
 
 .chef-card img {
-    height: 10em;
-    width: 10em;
-    border-radius: calc(10em / 2);
+    height: 15rem;
+    width: 15rem;
+    border-radius: calc(15rem / 2);
 }
 
 .chef-card p {
@@ -973,16 +975,6 @@ nav:last-child {
     font-size: 1em;
     height: 10em;
     width: 10em;
-}
-
-@media (max-width: 992px) {
-    #section-chefs h1 {
-        text-align: center;
-    }
-
-    .chefs-cards-container {
-        flex-direction: column;
-    }
 }
 
 #section-testimonials {
